# SCSU-WERTH-Quantum-Computing-Project

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CODEX_UPGRADE_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVIDENCE_STATUS.md  FINAL_RESEARCH_ANSWER.md  FINAL_STATUS.md  LICENSE  Makefile  PLAN.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  research_question.yml
.github/workflows/: ci.yml  clarify-evidence-status.yml  tests.yml
analysis/: generate_final_figures_r.R
config/: experiments.yaml
data/processed/: manifest_20260623T223649Z.json  results_20260623T223649Z.csv  results_20260623T223649Z.json
docs/: ARCHITECTURE.md  BEGINNER_GUIDE.md  BEGINNER_WALKTHROUGH.md  CODE_WALKTHROUGH.md  DATA_DICTIONARY.md  EXPERIMENT_PROTOCOL.md  FIGURE_GUIDE.md  FIGURE_INTERPRETATION_GUIDE.md  GLOSSARY.md  IBM_HARDWARE_VALIDATION.md  INSTALLATION.md  LIMITATIONS.md  MANUSCRIPT_REPOSITORY_ALIGNMENT.md  MANUSCRIPT_REVISION_NOTES.md  METRICS.md  OWNERSHIP_AND_CITATION.md  PLAIN_ENGLISH_FILE_GUIDE.md  PROJECT_SHOWCASE.md  QBRAID_VALIDATION.md  QUANTINUUM_FULL_SUITE_AUDIT_20260723.md  QUANTINUUM_HARDWARE_VALIDATION.md  REPRODUCE_EVERYTHING.md  RUNNING_THE_PROJECT.md  SOCIETAL_IMPACT.md  TROUBLESHOOTING.md  VERBAL_PROGRESS_REPORT.md
notebooks/: qbraid_validation.ipynb
reports/: R_VISUAL_ANALYSIS.md
results/final_figures/: README.md  final_figures_manifest.csv
results/hardware/: ibm_extended_validation_plan.json  ibm_extended_validation_submission_d95vhvd2su3c739gc080.json  ibm_job_d8up2d1ropqc738b44pg.json  ibm_job_d8up2d1ropqc738b44pg_summary.csv  ibm_job_d95vhvd2su3c739gc080.json  ibm_job_d95vhvd2su3c739gc080_summary.csv  quantinuum_full_suite_H2-1LE_20260723T163500Z_aggregate.csv  quantinuum_full_suite_H2-1LE_20260723T163500Z_r1.json  quantinuum_full_suite_H2-1LE_20260723T163500Z_r1_compact.csv  quantinuum_full_suite_H2-1LE_20260723T163500Z_r2.json  quantinuum_full_suite_H2-1LE_20260723T163500Z_r2_compact.csv  quantinuum_full_suite_H2-1LE_20260723T163500Z_r3.json  quantinuum_full_suite_H2-1LE_20260723T163500Z_r3_compact.csv  quantinuum_full_suite_H2-1LE_20260723T163500Z_raw.csv  quantinuum_full_suite_H2-Emulator_20260723T163500Z_aggregate.csv  quantinuum_full_suite_H2-Emulator_20260723T163500Z_r1.json  quantinuum_full_suite_H2-Emulator_20260723T163500Z_r1_compact.csv  quantinuum_full_suite_H2-Emulator_20260723T163500Z_r2.json  (+19 more)
scripts/: analyze_quantinuum_full_suite.py  check_environment.py  clarify_evidence_status.py  compare_run_artifacts.py  fetch_ibm_hardware_job.py  generate_final_figures.R  generate_publication_figures.R  generate_quantinuum_full_suite_figures.R  generate_report.py  list_devices.py  plot_quantinuum_validation.py  reproduce_everything.py  retrieve_quantinuum_full_suite.py  run_core_suite.py  submit_ibm_extended_validation.py  submit_quantinuum_validation.py  validate_repository.py
tests/: test_architecture_models.py  test_backend_modes.py  test_circuits.py  test_config.py  test_metrics.py  test_quantinuum_validation_script.py  test_smoke.py  test_submission_safety_aliases.py  test_visualization.py
(+41 files in other folders)
