[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-architecture-comparison"
version = "1.0.0"
description = "Different Roads to the Same Circuit: Quantum Architecture Comparison"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Abdellah Aly", email = "braytechfuturescape@icloud.com" },
]
keywords = [
  "quantum computing",
  "quantum architecture",
  "superconducting qubits",
  "trapped ions",
  "Qiskit",
  "compiler routing",
  "reproducible research",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "qiskit>=1.3,<2",
  "qiskit-aer>=0.16,<1",
  "numpy>=2,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.8,<4",
  "pyyaml>=6.0,<7",
  "python-dotenv>=1.0,<2",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
  "mypy>=1.12,<2",
]

[project.scripts]
quantum-compare = "quantum_compare.cli:main"

[project.urls]
Homepage = "https://github.com/Braytech-Findings/SCSU-WERTH-Quantum-Computing-Project"
Documentation = "https://github.com/Braytech-Findings/SCSU-WERTH-Quantum-Computing-Project/tree/main/docs"
Repository = "https://github.com/Braytech-Findings/SCSU-WERTH-Quantum-Computing-Project"
Issues = "https://github.com/Braytech-Findings/SCSU-WERTH-Quantum-Computing-Project/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
  "ignore:Since backends now support running jobs that contain both fractional gates and dynamic circuit, IBMFractionalTranslationPlugin is deprecated.*:DeprecationWarning:stevedore.extension",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true
