[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-architecture-comparison"
version = "1.1.0"
description = "Different Roads to the Same Circuit: Quantum Architecture Comparison"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "qiskit>=1.3,<2",
  "qiskit-aer>=0.16,<1",
  "numpy>=2,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.8,<4",
  "pyyaml>=6.0,<7",
  "python-dotenv>=1.0,<2",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
  "mypy>=1.12,<2",
  "types-PyYAML>=6.0.12,<7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
  "ignore:Since backends now support running jobs that contain both fractional gates and dynamic circuit, IBMFractionalTranslationPlugin is deprecated.*:DeprecationWarning:stevedore.extension",
]

[tool.ruff]
line-length = 100

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
